Change SQL Alchemy version

--- a/viikko2/poetry-web/pyproject.toml
+++ b/viikko2/poetry-web/pyproject.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 requires-python = "^3.12"
 dependencies = [
     "flask (>=3.1.2,<4.0.0)",
-    "sqlalchemy (>=2.0.44,<3.0.0)"
+    "sqlalchemy (==1.4.54)"
 ]
 
 
