--- a/viikko2/poetry-web/pyproject.toml
+++ b/viikko2/poetry-web/pyproject.toml
@@ -10,7 +10,9 @@ requires-python = "^3.12"
 dependencies = [
     "sqlalchemy (==1.4.54)",
     "fastapi (>=0.121.0,<0.122.0)",
-    "uvicorn[standard] (>=0.38.0,<0.39.0)"
+    "uvicorn[standard] (>=0.38.0,<0.39.0)",
+    "requests (>=2.32.5,<3.0.0)",
+    "rich (>=14.2.0,<15.0.0)"
 ]
 
 
