--- a/viikko2/nhl-reader/.pylintrc
+++ b/viikko2/nhl-reader/.pylintrc
@@ -5,7 +5,8 @@ ignore=single_file_to_ignore.py
 
 [MESSAGE CONTROL]
 
-disable=raw-checker-failed,
+disable=too-few-public-methods,
+        raw-checker-failed,
         bad-inline-option,
         locally-disabled,
         file-ignored,
